@@ -10,7 +10,7 @@ show-picked-versions = true
 
 [test]
 recipe = zc.recipe.egg
-scripts = py.test=test
+scripts = py.test = test
 eggs = ${buildout:package} [test]
     gocept.pytestlayer
     pytest
